fixing stretching on images when it bumps against max-height setting

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -281,6 +281,7 @@ img {
 	max-width: 100%;
 	max-height: 95vh;
 	height: auto;
+	width: auto;
 }
 
 figcaption {
